[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "light-util"
version = "0.0.1"
authors = [
  { name="Zhihao Zhang", email="2578503482@qq.com"},
]
description = "A utility package for Python projects, providing decorators and other utilities."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/zzhdbw/light-util"